base/infra/traefik/alb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-internal
  namespace: traefik
  annotations:
    alb.ingress.kubernetes.io/group.name: demo-platform-private-traefik
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: ${private_arn}
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    external-dns.alpha.kubernetes.io/hostname: traefik.${private_domain},traefik.feature.int
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 80
